# Python.NuPyServer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  nupyserver.example.conf  pyproject.toml  run.sh
nupyserver/: __init__.py  checkout.py  config.py  database.py  server.py  utils.py
nupyserver/v2/: __init__.py
nupyserver/v3/: __init__.py  autocomplete.py  container.py  query.py  services.py
scripts/: install_pi.sh
tests/: test_nupyserver.py
